- (finding bugs...) change overflow and padding

--- a/src/components/LogoAppBar/style.less
+++ b/src/components/LogoAppBar/style.less
@@ -8,7 +8,7 @@
   width: 100vw;
   height: 100vh;
   box-shadow: none !important;
-  overflow-x: auto;
+  overflow: hidden;
 
   .animation-enter &, .animation-exit & {
     .animated();
