--- a/src/pages/LogoPage/style.less
+++ b/src/pages/LogoPage/style.less
@@ -1,6 +1,6 @@
 
 .logo-page {
-  padding: 0 16px;
+  padding: 0 16px 96px;
   width: calc(100% - 32px);
   height: 100%;
   overflow: auto;
